--- a/02c_oms.tex
+++ b/02c_oms.tex
@@ -1,12 +1,12 @@
-\subsection{OMS (Object Modeling System)}\label{sec:oms}
+\subsection{OMS (Object Modeling System)}
 \par
 \subsubsection{Overview of OMS}
 \par
-OMS stands for Object Modeling System designed for environmental modeling. It is a collaborative project carried out by US Department of Agriculture and other partner organizations, which are involved in agro-environmental modeling. The OMS is a component-based software framework for environmental model development, data provisioning, testing, validation and deployment [1]. It allows the implementation of single or multiple process modules that can be developed or applied for custom-tailored module configurations [2]. With the help of the OMS framework, it is easier and more efficient for scientists to create or modify scientific models, simulate and run the models, analyze and evaluate the results. The OMS framework is an open source software system. Software developers can contribute to the OMS framework by adding new features to the existing framework to improve the performance of the framework.
+OMS stands for Object Modeling System designed for environmental modeling. It is a collaborative project carried out by US Department of Agriculture and other partner organizations, which are involved in agro-environmental modeling. The OMS is a component-based software framework for environmental model development, data provisioning, testing, validation and deployment \autocite{dsl:oms-david}. It allows the implementation of single or multiple process modules that can be developed or applied for custom-tailored module configurations \autocite{dsl:oms-ascough}. With the help of the OMS framework, it is easier and more efficient for scientists to create or modify scientific models, simulate and run the models, analyze and evaluate the results. The OMS framework is an open source software system. Software developers can contribute to the OMS framework by adding new features to the existing framework to improve the performance of the framework.
 \par
 \subsubsection{Technical Implementation}
 \par
-OMS supports component based software engineering. Models and components are treated as objects in OMS. An individual component is a web service or a module that encapsulate a set of related functions separated from the surrounding framework environment [4]. The OMS framework introduces a new approach of component modeling. In OMS framework, components are normal classes enriched with Java language level annotations. A normal class consists of fields and methods, which will be supplemented by language level annotations. The annotations are used to find the entry point of data flow and method execution. The computational method of a component will have a tag “@Execute” and data flows are indicated by the tags “@In” and “@Out”.
+OMS supports component based software engineering. Models and components are treated as objects in OMS. An individual component is a web service or a module that encapsulate a set of related functions separated from the surrounding framework environment \autocite{dsl:oms-component_based}. The OMS framework introduces a new approach of component modeling. In OMS framework, components are normal classes enriched with Java language level annotations. A normal class consists of fields and methods, which will be supplemented by language level annotations. The annotations are used to find the entry point of data flow and method execution. The computational method of a component will have a tag “@Execute” and data flows are indicated by the tags “@In” and “@Out”.
 The following example shows parts of a simple component of a bank account, whose financial credit varies year to year.
 \begin{verbatim}
 //1. First we have to import the necessary annotation interfaces.
@@ -90,7 +90,7 @@ The new version of the OMS framework 3.1 supports multiple threading. Each OMS3 
 \par
 \subsubsection{Advantages of OMS}
 \par
-The OMS framework provides the following benefits for model developers: [5]
+The OMS framework provides the following benefits for model developers: \autocite{dsl:oms-ahuja}
 \begin{itemize}
 \item The OMS framework enables efficient transfer of technology, because of the  integration of various software tools in one platform. Due to the common modeling platform and common user interface, the OMS will reduce the start-up time of model development and lower training costs of users.
 
@@ -103,7 +103,7 @@ The OMS framework provides the following benefits for model developers: [5]
 \end{itemize}
 \subsubsection{Disadvantages of OMS}
 \par
-Although the OMS framework provides various advantages for model developers, it also faces some difficulties. [5]
+Although the OMS framework provides various advantages for model developers, it also faces some difficulties. \autocite{dsl:oms-ahuja}
 \begin{itemize}
 \item Model developers always lack of motivation to share model code, for example, the component libraries of environmental processes, environmental models, etc. Therefore, model developers have to build their own modules repositories or contribute to the OMS module library, so that they are available for other model developers to do further developments.
 
