--- a/03_toolchain.tex
+++ b/03_toolchain.tex
@@ -28,7 +28,7 @@ The modeler starts with the implementation/coding of the model. Since this is th
 A very common approach to define the semantics in a formal and machine readable way (which is important for later code generation) are ontologies (see \nameref{sec:app:ontology} for an short explanation of ontologies). The reasons for this are discussed in[literature research paper das das belegt]. And also in the environmental domain ontologies are often used and are a very common way to define semantics of entities. \autocite{dsl:muetzelfeldt}, \autocite{Villa2009577}
 
 
-Therefore the semantics of every used entity or datatype must be defined in an ontology which then can be used to automatically check consistency of the model, and that allows the IDE to handle typical operations like automatic unit conversions. Actually there are a set of projects that has focused on this topic  and that developed a set of ontologies that define the semantic of entities in the environmental domain.  QUDT, which stands for Quantities, Units, Dimensions and Data Types in OWL and XML \autocite{toolchain:qudt} is one of these projects and one of it’s goals is to ``to provide a unified model of, measurable quantities, units for measuring different kinds of quantities, the numerical values of quantities in different units of measure and the data structures and data types used to store and manipulate these objects in software'' \autocite{toolchain:qudt}. Another, more famous project is Nasa SWEET (Semantic Web for Earth and Environment Technologies) \autocite{toolchain:nasa_sweet} which provides a very extensive set of ontologies and ``include several thousand terms, spanning a broad extent of Earth system science and related concepts''\autocite{toolchain:nasa_sweet_guide}.
+Therefore the semantics of every used entity or datatype must be defined in an ontology which then can be used to automatically check consistency of the model, and that allows the IDE to handle typical operations like automatic unit conversions. Actually there are a set of projects that has focused on this topic  and that developed a set of ontologies that define the semantic of entities in the environmental domain.  QUDT, which stands for Quantities, Units, Dimensions and Data Types in OWL and XML \autocite{toolchain:qudt} is one of these projects and one of it’s goals is to ``to provide a unified model of, measurable quantities, units for measuring different kinds of quantities, the numerical values of quantities in different units of measure and the data structures and data types used to store and manipulate these objects in software'' \autocite{toolchain:qudt}. Another, more famous project is Nasa SWEET (Semantic Web for Earth and Environment Technologies) \autocite{toolchain:nasa_sweet} which provides a very extensive set of ontologies and ``include several thousand terms, spanning a broad extent of Earth system science and related concepts''\autocite{nasa_sweet_guide}.
 
 
 Although these projects describe a huge set of environmental concepts it is conceivable that a modeler needs additional semantical aspects of an already existing concept or to create a totally new entity that isn’t already semantically described in the used ontology set. Therefore the user must have the possibility to edit the underlying ontologies.  There are already good tools that allow the creation of ontologies. Protege \ref{dsl:protege} is a very common tool for this. Although it would be sufficient to provide the user access to the underlying ontologies and thereby giving  the possibility to edit them with standard tools we think that providing the user with a specialized tool to do this is a much more better idea.
@@ -58,7 +58,7 @@ One example, which is very similar to the one described above, is the service or
 \end{enumerate}
 
 
-Besides that rough and overlooking argumentation, there are some existing modeling environments that make use of a very similar concept. Muetzfeld et. al describes in \autocite{dsl:muetzelfeldt} the idea of declarative modeling. The idea there is to describe the whole model in a declarative manner and hence abstract it from the concrete implementation. In order of doing this modeling environments like Similie (see chapter \nameref{sec:similie}), ACSL, Stella, Modelmaker, Powersim or Vensim ``enable a model to be saved to file as a design specification'' \autocite[32]{dsl:muetzelfeld} which also means that metadata of the model can be described.
+Besides that rough and overlooking argumentation, there are some existing modeling environments that make use of a very similar concept. Muetzfeld et. al describes in \autocite{dsl:muetzelfeldt} the idea of declarative modeling. The idea there is to describe the whole model in a declarative manner and hence abstract it from the concrete implementation. In order of doing this modeling environments like Similie (see chapter \nameref{sec:similie}), ACSL, Stella, Modelmaker, Powersim or Vensim ``enable a model to be saved to file as a design specification'' \autocite[32]{dsl:muetzelfeldt} which also means that metadata of the model can be described.
 
 
 Another example of the environmental domain, which also topics the description of models through metadata is OpenMI. OpenMI stands for Open Modelling Interface and Environment and its originally purpose is``[...]to facilitate the linking of models.'' \autocite[70]{adgeo-4-69-2005}. In order to do this OpenMI provides a set of standard interfaces that describe model parameters and so on.
