--- a/03_toolchain.tex
+++ b/03_toolchain.tex
@@ -79,7 +79,7 @@ To complete this discussion, we want to call attention to another very important
 To put it in a nutshell, we think that this step is more a question of how to integrate the feature in a user friendly way and we do not see problems in the technical feasibility.
 
 \section{run and verifiy}
-Once the model is written within the IDE it must be possible to run the model as simple as possible and get all necessaries simulation results the user requires. To run the model it is necessary to attach some datasources, because the data is not part of the model \autocite{dsl:muetzelfeld}. This task does not rely to the concrete modelprocess. It must be possible to attach and detach datasources in a simple way. \ref{sec:vision_for_a_dsl}
+Once the model is written within the IDE it must be possible to run the model as simple as possible and get all necessaries simulation results the user requires. To run the model it is necessary to attach some datasources, because the data is not part of the model \autocite{dsl:muetzelfeldt}. This task does not rely to the concrete modelprocess. It must be possible to attach and detach datasources in a simple way. \ref{sec:vision_for_a_dsl}
 
 
 The model itselfs would define dataslots on which data sources can be attached. In chapter Second DSL Draft the describe statement is used to describe a mapping betewen one datatupel to an onther, like an mathematical funktion. Further these statemant can be used as dataslot. In this way a the belonging value is not mappend with an formula. In chapter \ref{sec:second_dsl_draft} the describe statement is used to define a mapping between a input datatupel and output datatupel. These mapping is done with a mathematical formula. Further the describe statement can be used as a dataslot. Used in this way the describe statements provide the modeller the possibility to connect to an other model or database which will handle the mapping between input and output data.Further the model metadata describes the structure of the input data which is expected. Based on these informations it is possible that the IDE generates an adapter from the available data sources to the model \autocite[81]{Villa2009577}. This process would be entirely transparent for the user. The user will just use a wizard dialog to plug all available data sources to the model using the drag and drop metaphor. All data sources which can not converted to a format the model expects would automatically marked as inappropriate. If one source, which the user wants to use is marked as inappropriate, he has to reconsider the model definition.
