--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -286,7 +286,7 @@ keywords = "System identification "
 
 @article{Villa2009577,
 title = "Modelling with knowledge: A review of emerging semantic approaches to environmental modelling ",
-journal = "Environmental Modelling & Software ",
+journal = "Environmental Modelling and Software ",
 volume = "24",
 number = "5",
 pages = "577 - 587",
