simile chapter update

--- a/02a_similie.tex
+++ b/02a_similie.tex
@@ -34,7 +34,7 @@ Figure \ref{fig:simile_example_submodel} shows an example of creating a submodel
 	\caption{Submodel example bank account modular \label{fig:simile_example_submodel}}	
 \end{figure}
 \par
-The Simile modelling tool supports much more modelling types, other than system dynamics and modular modelling, such as disaggregation, spatial modelling, population modelling, object based modelling, etc. For more information about these modelling types, please refer to the homepage of the Simile software, or the papers in the reference.
+The Simile modelling tool supports much more modelling types, other than system dynamics and modular modelling, such as disaggregation, spatial modelling, population modelling, object based modelling, etc. For further information about these modelling types, please refer to the homepage of the Simile software, or the paper \autocite{dsl:simile-know}.
 \subsubsection{Advantages of Simile}
 \par
 The Simile modelling software offers the following benefits to the model developers:
