--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -217,7 +217,7 @@
 
 @online{dsl:oms-handbook,
 	title={Object Modeling System v3.0 - Developer and User Handbook},
-	author={Olaf David, Jack R. Carlson, George H. Leavesley,James C. Ascough II, Frank W. Geter, Kenneth W. Rojas, Lajpat R. Ahuja},
+	author={Olaf David and Jack R. Carlson and George H. Leavesley and James C. Ascough II and Frank W. Geter and Kenneth W. Rojas and Lajpat R. Ahuja},
 	urldate={2013-04-20},
 	url={http://oms.javaforge.com/download/OMSHandbook.pdf}
 }
