--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -258,7 +258,7 @@
 
 @article{Jakeman2006602,
 title = "Ten iterative steps in development and evaluation of environmental models ",
-journal = "Environmental Modelling & Software ",
+journal = "Environmental Modelling \& Software ",
 volume = "21",
 number = "5",
 pages = "602 - 614",
@@ -273,7 +273,7 @@ author = "A.J. Jakeman and R.A. Letcher and J.P. Norton",
 
 @article{Villa2009577,
 title = "Modelling with knowledge: A review of emerging semantic approaches to environmental modelling ",
-journal = "Environmental Modelling and Software ",
+journal = "Environmental Modelling \& Software ",
 volume = "24",
 number = "5",
 pages = "577 - 587",
