--- a/05_conclusion.tex
+++ b/05_conclusion.tex
@@ -28,5 +28,33 @@ Also for the last two requirements, account for modeling uncertainty and model t
 To put it in a nutshell, we have worked out some very promising ideas and concepts for some of the key features of the vision for the DSL, so that we believe that the essential parts of the general ideas, like adding semantic data types and so on, are realisable at least. But we are not sure how many and how complex problems would appear trying to implement these concepts. And we think that trying to implement this feature is a very time consuming and resource intensive. Besides that, for us it was not possible to analyze the feasibility of other also important but not so essential features such as model uncertainty and model transparency due to the very limited project period and the very low domain skills at the very beginning of the project.  
 
 \section{Thoughts on the project}
-%TODO bitte meine gedanken lesen.
+%TODO bitte meine gedanken ueberlesen die sind zu negativ.
+\par
+Right from the beginning we thought that the execution of the topic was difficult and challenging, and so it was. This had foremost two reasons, namely our lack of knowledge and experience with environmental modelling in general and the explorative nature of the topic.
+\par
+As we did not really know how to start, we thought and hoped it would be enough to read the provided papers by Athanasiadis and then somehow solve the problem. We soon realised that this idea was very naive and would not work. Due to this our general approach became, without explicitly planning it, to read in a topic, think about it and according to this read more. To become more concrete, the read in process consisted in reading papers and articles about environmental modelling in general and, later on, specific problems like generating an OOM from an ontologie. After this phase, we reflected and discussed about the newly gained knowledge and worked out some ideas. Normally these ideas brought up some other problems or their feasibility had to be checked. In both cases further research on our side was necessary.\\
+The binding of the DSL and the ontologie is a good example for this. We came up with the idea that the binding like described above must be necessary for our project and so we looked for references, which describe something similar and fortunately we found them. With these references we were able to refine our ideas and see problems, which were previously unknown to us.\\
+In a next step, these new problems could be attacked with further reading and thinking.
+To use an anthology to describe the project, it was similar to a jigsaw puzzle with hidden pieces and every single piece had to be found and used in the right place. Unfortunately the puzzle is not complete yet, but at least we found some missing parts.
+\par
+The lack of basic knowledge with environmental modelling was a big obstacle, which could have been eliminated with a preparation project and some guided support. This preparation project could consist for example in understanding and implementing a simple but complex enough existing model. This idea came up several times during the project, but did not succeed as this process was too time consuming. On the other side, we had a preparing lecture, which was helpful and gave us a first insight into the topic. However this lecture had a theoretical nature, so the practical aspects of modelling were missing.
+\par
+Another obstacle had an organisational nature, namely the rather big team size, which was prescribed by our university. With eight people it was difficult to provide everybody with useful tasks. Furthermore the level of knowledge and the english skills were very different for everybody. This lead to the problem that some finished reading a paper in short time and could start discussing it, whereas others needed significantly more time. In the beginning the only solution was to wait for everybody to follow-up. Nevertheless this circumstance upsetted both sides, as the one side started discussing about the topic, while the other were still reading. Vice versa the faster group had to wait until the other group finished reading, and could not work during that time. Fortunately this did not lead to bigger arguments and could be later on solved by splitting the tasks according to the individual preferences.
+\par
+Finally we can state, in spite of all problems, that the project was a good insight in environmental modelling, ontologies, scientific research and feasibility studies, which we could not have learned and experienced in another context during our studies.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
