replaced verbatim with listing

--- a/06_appendix.tex
+++ b/06_appendix.tex
@@ -47,8 +47,8 @@ In contrast to imperative programming, in which the focus is on HOW you want to 
 The programmer describes what the program have to do with a command, so how to deal with input, the calculation process is not of interest. The calculations are then carried out by manipulating values.
 \par
 The programs written in declarative programming languages are often shorter than comparable imperative programs. There are no side effects because of referential transparency. Programs are thus partially evaluated and allow the treatment of infinite data structures for example. \autocite{appendix:hawkins}
-\section{Model paradigms}
-\subsection{System Dynamics}
+
+\section{Definition of System Dynamics}
 \par
 System Dynamics (SD) is a common dynamic modelling paradigm within the ecological and environmental research communities. A SD model consists of compartments (stocks, levels, storages) connected by flows, with subsidiary variables for representing parameters and intermediate variables, and influence arrows to show which compartments and variables are used in the calculation of flows and other variables. Essentially, SD is a cosmetic language for defining differential- or difference-equation models: differential equations if the equations are taken to define continuous change; difference equations if the time step is taken to be unity. \autocite{appendix:model_paradigm}
 
