--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -344,6 +344,42 @@ URL = {sweet.jpl.nasa.gov/guide.doc}
     year = {}
 }
 
+@article{toolchain:gruber,
+title = "A translation approach to portable ontology specifications ",
+journal = "Knowledge Acquisition ",
+volume = "5",
+number = "2",
+pages = "199 - 220",
+year = "1993",
+note = "",
+issn = "1042-8143",
+doi = "10.1006/knac.1993.1008",
+url = "http://www.sciencedirect.com/science/article/pii/S1042814383710083",
+author = "Thomas R. Gruber"
+}
+
+@article{toolchain:musen,
+title = "Dimensions of knowledge sharing and reuse ",
+journal = "Computers and Biomedical Research ",
+volume = "25",
+number = "5",
+pages = "435 - 467",
+year = "1992",
+note = "",
+issn = "0010-4809",
+doi = "10.1016/0010-4809(92)90003-S",
+url = "http://www.sciencedirect.com/science/article/pii/001048099290003S",
+author = "Mark A. Musen"
+}
+
+
+@online{toolchain:protege_onto,
+	title={Ontology Development 101: A Guide to Creating Your First Ontology},
+	author={Natalya F. Noy  and Deborah L. McGuinness},
+	urldate={2013-04-21},
+	url={http://protege.stanford.edu/publications/ontology_development/ontology101-noy-mcguinness.html}
+}
+
 @inproceedings{ontology:owl-mapping,
     address = {Banff, Alberta, Canada},
     author = {Kalyanpur, Aditya and Pastor, Daniel J. and Battle, Steve and Padget, Julian A.},
