--- a/06_appendix.tex
+++ b/06_appendix.tex
@@ -100,7 +100,7 @@ terminal NUMBER returns ecore::EBigDecimal:
 ('0'..'9')* ('.' ('0'..'9')+)?;
 \end{lstlisting}
 
-\section{Predator-Prey model with our second DSL draft}
+\section{Predator-Prey model with our second DSL draft} \label{sec:second_dsl_draft}
 \par
 A predator-prey model from \autocite{dsl:dynamo} written with our second DSL draft. It is not complete, but it shows that the code is already bloated.
 \newline
