added a reference to the first dsl draft

--- a/06_appendix.tex
+++ b/06_appendix.tex
@@ -52,7 +52,7 @@ The programs written in declarative programming languages are often shorter than
 \par
 System Dynamics (SD) is a common dynamic modelling paradigm within the ecological and environmental research communities. A SD model consists of compartments (stocks, levels, storages) connected by flows, with subsidiary variables for representing parameters and intermediate variables, and influence arrows to show which compartments and variables are used in the calculation of flows and other variables. Essentially, SD is a cosmetic language for defining differential- or difference-equation models: differential equations if the equations are taken to define continuous change; difference equations if the time step is taken to be unity. \autocite{appendix:model_paradigm}
 
-\section{Grammar of the first DSL draft}
+\section{Grammar of the first DSL draft} \label{sec:first_dsl_draft}
 \par
 The first DSL draft had the goal to be able to represent the Similie Bank Tutorial \autocite{dsl:similie_tutorial_bank} textually. Its grammar looked like the following:
 \begin{lstlisting}
