added some references

--- a/03_toolchain.tex
+++ b/03_toolchain.tex
@@ -19,7 +19,7 @@ We decided to start with the implementation of the model. Prior steps such as de
 \end{figure}
 
 
-\section{Writing a Model}
+\section{Writing a Model} \label{sec:writing_a_model}
 The modeler starts with the implementation/coding of the model. Since this is the most basic part of the IDE and the main interface for the user, this is the place to include the most relevant and crucial tools to support the user during the coding phase. These features are very diverse and range from very simple and basic ones like code completion, syntax highlighting, automatic warnings and action items to much more complex and specialized ones that belongs to the requirements from chapter \ref{sec:vision_for_a_dsl}. One of these very specific features are domain specific semantic datatypes and the handling of typical operations as explained earlier. In order to achieve these features, it is necessary to define important semantical aspects of entities and datatypes used in the model.
 
 
