--- a/01_abstract.tex
+++ b/01_abstract.tex
@@ -4,7 +4,7 @@
 \par
 Environmental modelers and scientists are nowadays forced, to implement their model with standard programming languages. Since they are often not familiar with designing and handling large software projects and often with the programming itself, this is a very time consuming process. This leads to poor implemented models, that are inefficient, not stable and not exchangeable.
 \\
-Although there are already existing modeling environments that tries to cover this problem, most of them just provide a basic set of standard code fragments that takes away standard tasks like I/O handling from the modelers responsibility.
+Although there are already existing modeling environments that try to cover this problem, most of them just provide a basic set of standard code fragments that take away standard tasks like I/O handling from the modelers responsibility.
 
 \section*{The Vision}
 \par
