--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -4,7 +4,7 @@ Modern information and communication technologies are widely used in almost ever
 \par
 These requirements have led to the development of different environmental modelling frameworks, such as CCA, ESMF, TIME, OMS, etc. These frameworks are implemented in general purpose languages, such as C, Java, Fortran, etc. They mostly provide application programming interfaces, which were specially implemented according to the needs of environmental modelling. They help the scientists to develop, adapt, reuse or integrate different models. However, they carry with them many kinds of disadvantages. Software implementations of environmental models are seldom reused by broader communities or in different modelling frameworks, because of the poor semantic of the model interfaces. In most cases, the models are only usable for a specific application. It is hard for other components to make use of the available models, because of the poor communication abilities of the models.
 \par
-To overcome the disadvantages of the available model frameworks, domain specific language brings about a lot of benefits. It offers appropriate domain specific syntax and notations, which allows user to describe a solution at the level of the abstraction of problem domain. It allows validation at the domain level. Environmental scientists can make the best use of the domain specific language, because it follows the domain abstractions and semantics as closely as possible. The build-in functions like analysis, verification, optimization, parallelization and  transformation allow the scientists to create reliable models with high quality and productivity, which are easy to maintain and distribute on other platforms.
+To overcome the disadvantages of the available model frameworks, domain specific language brings about a lot of benefits. It offers appropriate domain specific syntax and notations, which allows the user to describe a solution at the level of abstraction of the problem domain. It allows validation at the domain level. Environmental scientists can make the best use of the domain specific language, because it follows the domain abstractions and semantics as closely as possible. The build-in functions like analysis, verification, optimization, parallelization and  transformation allow the scientists to create reliable models with high quality and productivity, which are easy to maintain and distribute on other platforms.
 \par
 The following section describes the project goals which aims to solve these problems. Furthermore, the various features of the solution will be described in the section \nameref{sec:vision_for_a_dsl}. After that the priorities of the project goals will be defined.
 
