--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -6,7 +6,7 @@ These requirements have led to the development of different environmental modell
 \par
 To overcome the disadvantages of the available model frameworks, domain specific language brings about a lot of benefits. It offers appropriate domain specific syntax and notations, which allows the user to describe a solution at the level of abstraction of the problem domain. It allows validation at the domain level. Environmental scientists can make the best use of the domain specific language, because it follows the domain abstractions and semantics as closely as possible. The build-in functions like analysis, verification, optimization, parallelization and  transformation allow the scientists to create reliable models with high quality and productivity, which are easy to maintain and distribute on other platforms.
 \par
-The following section describes the project goals which aims to solve these problems. Furthermore, the various features of the solution will be described in the section \nameref{sec:vision_for_a_dsl}. After that the priorities of the project goals will be defined.
+The following section describes the project goals which aim to solve these problems. Furthermore, the various features of the solution will be described in the section \nameref{sec:vision_for_a_dsl}. After that the priorities of the project goals will be defined.
 
 \section{Project Goals}
 \par
