changed authors format to get better abbreviations

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -107,7 +107,7 @@
 
 @online{dsl:protege,
 	title={Protege Homepage},
-  	author={National Institute of General Medical Sciences},
+  	author={{National Institute of General Medical Sciences}},
 	urldate={2013-02-14},
 	url={http://protege.stanford.edu/},
 	year={2013}
@@ -196,7 +196,7 @@
 @InProceedings{dsl:oms-ascough,
 	title = {Development and Evaluation of a component-based watershed model using the Object Modeling System},
 	booktitle = {2nd Joint Federal Interagency Conference},
-	author = {James C. Ascough II and Olaf David and George H. Leavesley and Peter Krause and Sven Kralisch and Lajpat R. Ahuja},
+	author = {Ascough,II,James C. and Olaf David and George H. Leavesley and Peter Krause and Sven Kralisch and Lajpat R. Ahuja},
 	year = 2010
 }
 
@@ -235,7 +235,7 @@
 
 @online{dsl:simile-simulistics,
 	title={Simulistics},
-	author={Simulistics Ltd},
+	author={{Simulistics Ltd}},
 	urldate={2013-04-19},
 	url={http://www.simulistics.com/}
 }
@@ -442,7 +442,7 @@ doi={10.1109/CTRQ.2010.50},}
 
 @Article{appendix:dsl,
 	title = {Domänenspezifische Sprachen},
-	author = {LPZ E-BUSINESS | IT-RADAR},
+	author = {{LPZ E-BUSINESS | IT-RADAR}},
 	journal = {LPZ-RADAR.DE},
 	year = {2007}
 }
@@ -462,7 +462,7 @@ doi={10.1109/CTRQ.2010.50},}
 
 @online{appendix:model_paradigm,
 	title={System Dynamics},
-	author={Simulistics Ltd},
+	author={{Simulistics Ltd}},
 	urldate={2013-04-20},
 	url={http://www.simulistics.com/tour/systemdynamics.htm}
 }
