added new Thoughts on project

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -8,6 +8,18 @@
 	year={2012}
 }
 
+@ARTICLE{dsl:kelly,
+	author={Kelly, S. and Pohjonen, R.},
+	journal={Software, IEEE}, title={Worst Practices for Domain-Specific Modeling},
+	year={2009},
+	volume={26},
+	number={4},
+	pages={22-29},
+	keywords={simulation languages;DSM language;domain-specific modeling languages;language developers;Assembly systems;Humans;Nose;Protection;Prototypes;Software systems;Vocabulary},
+	doi={10.1109/MS.2009.109},
+	ISSN={0740-7459},
+}
+
 @report{dsl:dynamo,
 	title={Simulation dynamischer Vorgänge zur \enquote{System Dynamics} - Methode und ihren Problemen},
 	author={Claus Peter Ortlieb},
@@ -232,6 +244,25 @@
 	URL = {http://www.adv-geosci.net/4/29/2005/},
 	DOI = {10.5194/adgeo-4-29-2005}
 }
+
+@article{Lloyd:2011:EMF:1994475.1995042,
+	 author = {Lloyd, W. and David, O. and Ascough,II, J. C. and Rojas, K. W. and Carlson, J. R. and Leavesley, G. H. and Krause, P. and Green, T. R. and Ahuja, L. R.},
+	 title = {Environmental modeling framework invasiveness: Analysis and implications},
+	 journal = {Environ. Model. Softw.},
+	 issue_date = {October, 2011},
+	 volume = {26},
+	 number = {10},
+	 month = oct,
+	 year = {2011},
+	 issn = {1364-8152},
+	 pages = {1240--1250},
+	 numpages = {11},
+	 url = {http://dx.doi.org/10.1016/j.envsoft.2011.03.011},
+	 doi = {10.1016/j.envsoft.2011.03.011},
+	 acmid = {1995042},
+	 publisher = {Elsevier Science Publishers B. V.},
+	 address = {Amsterdam, The Netherlands, The Netherlands},
+} 
 
 @online{dsl:simile-simulistics,
 	title={Simulistics},
