removed reference of a picture from List of figures

--- a/02b_esmf.tex
+++ b/02b_esmf.tex
@@ -6,7 +6,7 @@ ESMF provides a complete set of Fortran interfaces and some C and C++ interfaces
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.7\textwidth]{pics/esmf/esmf_architecture.png}
-	\caption{Schematic of the ESMF architecture \autocite{dsl:esmf-regridding} \label{fig:esmf_architecture}}	
+	\caption[Schematic of the ESMF architecture]{Schematic of the ESMF architecture \autocite{dsl:esmf-regridding} \label{fig:esmf_architecture}}	
 \end{figure}
 \par
 Like many other frameworks, this also does not provide “instructions” that can be used immediately to develop a DSL. To create own models, knowledge in general-purpose languages is required.
